--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run build:live",
     "build": "tsc -p .",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
-    "build:docker": "docker build -t ts-service:latest ."
+    "build:docker": "docker build -t ts-service:latest .",
+    "prettier": "prettier --write '**/*.{js,ts,tsx}' '!**/lib/**' --config .prettierrc --ignore-path .prettierignore"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.2",
     "nodemon": "^2.0.6",
+    "prettier": "^2.1.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
