--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "build": "tsc -p .",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
     "build:docker": "docker build -t ts-service:latest .",
-    "prettier": "prettier --write '**/*.{js,ts,tsx}' '!**/lib/**' --config .prettierrc --ignore-path .prettierignore"
+    "prettier": "prettier --write '**/*.{js,ts,tsx}' '!**/lib/**' --config .prettierrc --ignore-path .prettierignore",
+    "eslint": "eslint . --ext ts --fix --max-warnings=1",
+    "test": "jest --watch --config=config/jest.config.js",
+    "test:unit": "jest --coverage --config=config/jest.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.3",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "eslint": "^7.13.0",
@@ -23,10 +27,12 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.2",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.0",
